examples/invalid/rt_forbidden_effects.sarif
fn main() effects [alloc, ffi] {
}
